--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <h1>The form method="get" attribute</h1>
 
+<!-- Get form. Variables retrieved through address bar -->
 <form action="/name" method="get" target="_blank">
   <label for="fname">First name:</label>
   <input type="text" id="fname" name="fname"><br><br>
@@ -13,6 +14,7 @@
   <input type="submit" value="Submit">
 </form>
 
+<!-- Post form. Variables retrieved through JavaScript -->
     <h1>The form method="post" attribute</h1>
 <form action="/name" method="post" target="_blank">
     <label for="fname">First name:</label>
